# rotors_simulator

./: README.md
rotors_control/: CMakeLists.txt
rotors_control/include/rotors_control/: common.h  exercise_controller.h
rotors_control/src/nodes/: exercise_controller_node.cpp  exercise_controller_node.h
rotors_gazebo/launch/: mav_exercise_controller.launch
rotors_gazebo/resource/: exercise_controller_firefly.yaml  firefly.yaml
